# geodetector

./: .gitignore  README.md  pyproject.toml  try.py
.github/workflows/: ci.yml
scripts/: plot_demo.py  verify_rgd_fix.py
src/: __init__.py  gd_regressor.py  geodetector.py
src/dataset/: __init__.py  _load_data.py
src/geodetector/: __init__.py  _base.py  _groupby.py  _parallel.py  _stats.py  _types.py  detectors.py  discretize.py  gd_regressor.py  geodetector.py  plotting.py  utils.py
src/geodetector/dataset/: __init__.py  _load_data.py
src/geodetector/extensions/: __init__.py  _geometric.py  _gozh.py  _lesh.py  _opgd.py  _rgd.py
src/geodetector/utils/: __init__.py  _groupby.py
src/utils/: __init__.py
tests/: conftest.py  test_base.py  test_detectors.py  test_discretize.py  test_edge_cases.py  test_esimator_checks.py  test_extensions.py  test_stats.py  test_utils.py
