[build-system]
requires = [
  "hatchling",
  "sklearn"
  ]
build-backend = "hatchling.build"


[project]
name = "geodetector"
version = "0.0.2"
authors = [
  { name="lvyaqiao", email="lvyaqiao@126.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/lvyaqiao/geodetector"
"Bug Tracker" = "https://github.com/lvyaqiao/geodetector/issues"