[build-system]
requires = [
    "hatchling",
    "numpy",
    "sklearn",
    "seaborn"
]
build-backend = "hatchling.build"


[project]
name = "geodetector"
version = "0.0.3"
authors = [
    { name = "lvyaqiao", email = "lvyaqiao@126.com" },
]
description = "a tool for detect the relationship between variables"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/lvyaqiao/geodetector"
"Bug Tracker" = "https://github.com/lvyaqiao/geodetector/issues"